--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,16 +6,22 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1.7;
-    color: #222;
-    background-color: white;
+    line-height: 1.6;
+    color: white;
+    background-color: blue;
 }
 
 header {
     background: linear-gradient(135deg, blue 0%, white 100%);
     color: white;
-    padding: 2rem 0;
+    padding: 0.10rem 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+}
+
+.container {
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 nav {
@@ -27,11 +33,36 @@ nav {
     align-items: center;
 }
 
-.Logo {
-    font-size: 2rem;
-    font-weight: bold;
+.navbar {
+    background: linear-gradient(150deg, red, orange, yellow);
+    padding: 1rem 0;
+    box-shadow: 0 4px 8px rgba(105, 125, 250, 0.3);
+
+.navbar .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.logo h1 {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.nav-menu {
+    display: flex;
+    list-style: none;
+    gap: 2.5rem;
+}
+
+.nav-menu a{
+    color: Black;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1rem;
+    position: relative;
+}
 nav ul {
     list-style: none;
     display: flex;
@@ -45,6 +76,8 @@ nav a {
     transition: opacity 0.3s ease;
 }
 
-nav a:hover {
-    opacity: 0.7;
+.hero{
+    
+}
+
 }
